# QtNote

./: .clang-format-ignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AdvUninstLog.nsh  CMakeLists.txt  Changelog  PKGBUILD  README.md  Setup.vdproj  aboutdlg.cpp  aboutdlg.h  aboutdlg.ui  common.pri  conanfile.txt  config.h  filestorage.h  index.html  install_common.pri.in  installer.wxs  installer.wxs.in  main.cpp  main.qrc  mainwidget.cpp  mainwidget.h  note.cpp  note.h  notedata.cpp  notedata.h  notedialog.cpp  notedialog.h  notedialog.ui  notemanager.cpp  notemanager.h  notestorage.cpp  notestorage.h  optionsdlg.cpp  optionsdlg.h  optionsdlg.ui  params.json  (+23 more)
langs/: CMakeLists.txt  qtnote_da.ts  qtnote_en.qm  qtnote_en.ts  qtnote_es_ES.ts  qtnote_fr.qm  qtnote_fr.ts  qtnote_it.ts  qtnote_nl_NL.ts  qtnote_ru.qm  qtnote_ru.ts  qtnote_uk.qm  qtnote_uk.ts  qtnote_vi.qm  qtnote_vi.ts  qtnote_zh_TW.ts
libqtnote/: CMakeLists.txt  aboutdlg.cpp  aboutdlg.h  aboutdlg.ui  bundledplugininterface.h  bundledpluginregistry.cpp  bundledpluginregistry.h  colorbutton.cpp  colorbutton.h  conflictresolver.cpp  conflictresolver.h  core.qrc  corestorageregistry.cpp  corestorageregistry.h  defaults.h  desktopeditorplatformbackend.cpp  desktopeditorplatformbackend.h  desktopnoteeditorhost.cpp  desktopnoteeditorhost.h  dialogservice.cpp  dialogservice.h  draftmanager.cpp  draftmanager.h  draftstore.h  filedraftstore.cpp  filedraftstore.h  filenameprovider.cpp  filenameprovider.h  filenotedata.cpp  filenotedata.h  fileremotecachestore.cpp  fileremotecachestore.h  filestorage.cpp  filestorage.h  filestoragesettingswidget.cpp  filestoragesettingswidget.h  filestoragesettingswidget.ui  freedesktopnotifier.cpp  freedesktopnotifier.h  globalshortcut.h  (+129 more)
libqtnote/qml/: DesktopNoteEditor.qml  DialogHost.qml  EditorContextMenu.qml  EditorToolbar.qml  ListBlockBehavior.js  NoteBlockEditor.qml  NoteFindBar.qml  NotesManagerPage.qml  NotesManagerWindow.qml  SettingsForm.qml  SettingsWindow.qml  TableBlockBehavior.js
plugins/: CMakeLists.txt  actionnotificationinterface.h  deintegrationinterface.h  globalshortcutsinterface.h  notecontextmenuhandler.h  notificationinterface.h  plugin.pri  pluginoptionsinterface.h  plugins.pro  qtnoteplugininterface.h  spellcheckproviderinterface.h  stickynotesintegrationinterface.h  trayiconinterface.h  trayimpl.h  trayinterface.h
plugins/baseintegration/: CMakeLists.txt  baseintegration.cpp  baseintegration.h  baseintegration.pro  baseintegration.qrc  baseintegrationtray.cpp  baseintegrationtray.h
plugins/cinnamon/: CMakeLists.txt  cinnamon.cpp  cinnamon.h
plugins/crypt/: crypt.pro  notecrypt.cpp  notecrypt.h
plugins/gemini/: CMakeLists.txt  geminiplugin.cpp  geminiplugin.h
plugins/gnome/: CMakeLists.txt  gnome.cpp  gnome.h  gnome.qrc  gnometray.cpp  gnometray.h  x11util.cpp  x11util.h
plugins/googlespeech/: CMakeLists.txt  googlespeechplugin.cpp  googlespeechplugin.h
plugins/kdeintegration/: CMakeLists.txt  kdeintegration.cpp  kdeintegration.h  kdeintegration.pro  kdeintegrationtray.cpp  kdeintegrationtray.h  main.qrc  sonnetspellcheckprovider.cpp  sonnetspellcheckprovider.h  trayicon.cpp  trayicon.h
plugins/macosx/: CMakeLists.txt  macosx.cpp  macosx.h  macosx.qrc  macosxtray.cpp  macosxtray.h
plugins/nextcloud/: CMakeLists.txt  README.md  nextclouddata.cpp  nextclouddata.h  nextclouddto.h  nextcloudplugin.cpp  nextcloudplugin.h  nextcloudsettingswidget.cpp  nextcloudsettingswidget.h  nextcloudstorage.cpp  nextcloudstorage.h  nextcloudworker.cpp  nextcloudworker.h
plugins/openaiwhisper/: CMakeLists.txt  openaiwhisperplugin.cpp  openaiwhisperplugin.h
plugins/spellchecker/: CMakeLists.txt  dictionarydownloader.cpp  dictionarydownloader.h  engineinterface.cpp  engineinterface.h  hunspelldownloader.cpp  hunspelldownloader.h  hunspellengine.cpp  hunspellengine.h  main.qrc  settingsdlg.cpp  settingsdlg.h  settingsdlg.ui  spellchecker.cpp  spellchecker.h  spellchecker.pro  spellchecker.qrc  spellcheckplugin.cpp  spellcheckplugin.h
plugins/tomboy/: CMakeLists.txt  tomboy.pro  tomboy.qrc  tomboydata.cpp  tomboydata.h  tomboyplugin.cpp  tomboyplugin.h  tomboystorage.cpp  tomboystorage.h
plugins/ubuntu/: CMakeLists.txt  statusnotifieritem.cpp  statusnotifieritem.h  ubuntu.cpp  ubuntu.h  ubuntu.pro  ubuntu.qrc  ubuntutray.cpp  ubuntutray.h  x11util.cpp  x11util.h
plugins/xmpppubsub/: CMakeLists.txt  E2E_FUTURE.md  PROTOXEP.md  README.md  XmppSettings.qml  qtnotepubsubitem.cpp  qtnotepubsubitem.h  xmppbackend.h  xmppdata.cpp  xmppdata.h  xmppdto.h  xmpperror.cpp  xmpperror.h  xmppkeyresolutiondialog.cpp  xmppkeyresolutiondialog.h  xmppkeysyncextension.cpp  (+22 more)
src/: CMakeLists.txt  aboutdlg.ui  com.github.ri0n.QtNote.service.in  config.h  filenotedata.cpp  filenotedata.h  filestorage.cpp  filestorage.h  main.cpp  mainwidget.cpp  mainwidget.h  note.cpp  notedata.cpp  notedata.h  notedialog.cpp  notedialog.h  notedialog.ui  notedialogedit.cpp  notedialogedit.h  notemanager.cpp  notemanager.h  notemanagerdlg.cpp  notemanagerdlg.h  notemanagerdlg.ui  notemanagermodel.cpp  notemanagermodel.h  notemanagerview.cpp  notemanagerview.h  notesmodel.cpp  notesmodel.h  notestorage.h  notewidget.cpp  notewidget.h  notewidget.ui  optionsdlg.cpp  optionsdlg.h  optionsdlg.ui  pluginmanager.cpp  pluginmanager.h  ptfdata.h  (+20 more)
tests/: CMakeLists.txt  desktopnoteeditorhost_test.cpp  dialogservice_test.cpp  filedraftstore_test.cpp  fileremotecachestore_test.cpp  localmediastore_test.cpp  noteblockmodel_test.cpp  noteeditor_test.cpp  notefragment_test.cpp  notefragmentmediatransfer_test.cpp  notetransfercontroller_test.cpp  qmlnoteeditor.cpp  qmlnoteeditor.h  qmlnoteeditor_test.cpp  secureenvelope_test.cpp  xmpperror_test.cpp  xmppkeysyncextension_test.cpp  xmppnotecodec_test.cpp  xmppomemopubsubitems_test.cpp  xmppomemostorage_test.cpp  xmpppersistenttruststorage_test.cpp
translations/: CMakeLists.txt  qtnote_da.ts  qtnote_en.ts  qtnote_es_ES.ts  qtnote_fr.ts  qtnote_it.ts  qtnote_nl_NL.ts  qtnote_ru.ts  qtnote_uk.ts  qtnote_vi.ts  qtnote_zh_CN.ts  qtnote_zh_TW.ts  transifex.yml
(+100 files in other folders)
